--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-    <html lang="en">
-        <head>
-        <meta charset="UTF-8" />
-        <title>2110-2112 Frisch Road</title>
-        <link rel="stylesheet" href="styles.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <title>2110-2112 Frisch Road</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="home-bg">
-<h1>2110-2112 Frisch Road</h1>
- <nav class="navbar">
+    <h1>2110-2112 Frisch Road</h1>
+    <nav class="navbar">
         <ul>
-        <li><a href="Frisch-Duplex.html" style="color:rgb(255, 255, 255);">Home</a></li>
-        <li><a href="2110-frisch.html" style="color:green;">2110 Frisch Road</a></li>
-        <li><a href="2112-frisch.html" style="color:blue;">2112 Frisch Road</a></li>
-        <li><a href="howtoapply.html" style="color:red;">How to Apply</a></li>
+            <li><a href="index.html" style="color:rgb(255, 255, 255);">Home</a></li>
+            <li><a href="2110-frisch.html" style="color:green;">2110 Frisch Road</a></li>
+            <li><a href="2112-frisch.html" style="color:blue;">2112 Frisch Road</a></li>
+            <li><a href="howtoapply.html" style="color:red;">How to Apply</a></li>
         </ul>
- </nav>
-<main>
+    </nav>
+    <main>
         <h2>Welcome Home!</h2>
-        <p>These recently rennovated houses are great for people looking for a large yard with modern ammenities. </p>
-    <section>
-
-    <article></article>
-   </main>
+        <p>These recently renovated houses are great for people looking for a large yard with modern amenities.</p>
+    </main>
 </body>
 </html>
 
