--- a/2110-frisch.html
+++ b/2110-frisch.html
@@ -9,7 +9,7 @@
 <h1>2110</h1>
  <nav class="navbar">
         <ul>
-        <li><a href="Frisch-Duplex.html" style="color:rgb(255, 255, 255);">Home</a></li>
+        <li><a href="index.html" style="color:rgb(255, 255, 255);">Home</a></li>
         <li><a href="2110-frisch.html" style="color:green;">2110 Frisch Road</a></li>
         <li><a href="2112-frisch.html" style="color:blue;">2112 Frisch Road</a></li>
         <li><a href="howtoapply.html" style="color:red;">How to Apply</a></li>
