--- a/howtoapply.html
+++ b/howtoapply.html
@@ -9,14 +9,23 @@
 <h1>How To Apply to your new house</h1>
  <nav class="navbar">
         <ul>
-        <li><a href="Frisch-Duplex.html" style="color:rgb(255, 255, 255);">Home</a></li>
+        <li><a href="index.html" style="color:rgb(255, 255, 255);">Home</a></li>
         <li><a href="2110-frisch.html" style="color:green;">2110 Frisch Road</a></li>
         <li><a href="2112-frisch.html" style="color:blue;">2112 Frisch Road</a></li>
         <li><a href="howtoapply.html" style="color:red;">How to Apply</a></li>
         </ul>
  </nav>
 <main>
-
+        <h2>Application Process</h2>
+        <p>To apply for one of these houses, please follow these steps:</p>
+        <ol>
+            <li>Download the application form from our website.</li>
+            <li><a href="How to Apply.docx"> How to Apply</a></li>
+            <li>Fill out the form with your personal information.</li>
+            <li>Submit the completed form via email to frisch@fanter.io.</li>
+            <li>Wait for a confirmation email regarding your application status.</li>
+        </ol>
+        <p>If you have any questions, feel free to contact us at frisch@fanter.io<a href="mailto:
    </main>
 </body>
 </html>
